[package]
name = "gamba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.0"
pulldown-cmark = "0.5"
walkdir = "2.3"
frontmatter = "0.9"
frontma = { git = "https://github.com/r7kamura/frontma.git" }


